@@ -9,12 +9,12 @@ module Technoweenie # :nodoc:
         def self.included(base) #:nodoc:
           base.before_update :rename_file
         end
-      
+
         # Gets the full path to the filename in this format:
         #
         #   # This assumes a model name like MyModel
-        #   # public/#{table_name} is the default filesystem path 
-        #   RAILS_ROOT/public/my_models/5/blah.jpg
+        #   # public/#{table_name} is the default filesystem path
+        #   #{Rails.root}/public/my_models/5/blah.jpg
         #
         # Overwrite this method in your model to customize the filename.
         # The optional thumbnail argument will output the thumbnail's filename.
@@ -22,17 +22,17 @@ module Technoweenie # :nodoc:
           file_system_path = (thumbnail ? thumbnail_class : self).attachment_options[:path_prefix].to_s
           Rails.root.join( file_system_path, *partitioned_path(thumbnail_name_for(thumbnail))).to_s
         end
-      
+
         # Used as the base path that #public_filename strips off full_filename to create the public path
         def base_path
           @base_path ||= Rails.root.join('public').to_s
         end
-      
+
         # The attachment ID used in the full path of a file
         def attachment_path_id
           ((respond_to?(:parent_id) && parent_id) || id) || 0
         end
-      
+
         # Partitions the given path into an array of path components.
         #
         # For example, given an <tt>*args</tt> of ["foo", "bar"], it will return
@@ -42,10 +42,10 @@ module Technoweenie # :nodoc:
         # hashing the string value of the id with SHA-512, and splitting the result
         # into 4 components. If the id a 128-bit UUID (as set by :uuid_primary_key => true)
         # then it will be split into 2 components.
-        # 
+        #
         # To turn this off entirely, set :partition => false.
         def partitioned_path(*args)
-          if respond_to?(:attachment_options) && attachment_options[:partition] == false 
+          if respond_to?(:attachment_options) && attachment_options[:partition] == false
             args
           elsif attachment_options[:uuid_primary_key]
             # Primary key is a 128-bit UUID in hex format. Split it into 2 components.
@@ -65,13 +65,13 @@ module Technoweenie # :nodoc:
             end
           end
         end
-      
+
         # Gets the public path to the file
         # The optional thumbnail argument will output the thumbnail's filename.
         def public_filename(thumbnail = nil)
           full_filename(thumbnail).gsub %r(^#{Regexp.escape(base_path)}), ''
         end
-      
+
         def filename=(value)
           @old_filename = full_filename unless filename.nil? || @old_filename
           write_attribute :filename, sanitize_filename(value)
@@ -104,7 +104,7 @@ module Technoweenie # :nodoc:
             @old_filename =  nil
             true
           end
-          
+
           # Saves the file to the file system
           def save_to_storage
             if save_attachment?
@@ -116,7 +116,7 @@ module Technoweenie # :nodoc:
             @old_filename = nil
             true
           end
-          
+
           def current_data
             File.file?(full_filename) ? File.read(full_filename) : nil
           end
