@@ -12,7 +12,7 @@ module Technoweenie # :nodoc:
       #
       # == Configuration
       #
-      # Configuration is done via <tt>RAILS_ROOT/config/amazon_s3.yml</tt> and is loaded according to the <tt>RAILS_ENV</tt>.
+      # Configuration is done via <tt>#{Rails.root}/config/amazon_s3.yml</tt> and is loaded according to the <tt>RAILS_ENV</tt>.
       # The minimum connection options that you must specify are a bucket name, your access key id and your secret access key.
       # If you don't already have your access keys, all you need to sign up for the S3 service is an account at Amazon.
       # You can sign up for S3 and get access keys by visiting http://aws.amazon.com/s3.
@@ -20,7 +20,7 @@ module Technoweenie # :nodoc:
       # If you wish to use Amazon CloudFront to serve the files, you can also specify a distibution domain for the bucket.
       # To read more about CloudFront, visit http://aws.amazon.com/cloudfront
       #
-      # Example configuration (RAILS_ROOT/config/amazon_s3.yml)
+      # Example configuration (#{Rails.root}/config/amazon_s3.yml)
       #
       #   development:
       #     bucket_name: appname_development
@@ -42,7 +42,7 @@ module Technoweenie # :nodoc:
       #
       # You can change the location of the config path by passing a full path to the :s3_config_path option.
       #
-      #   has_attachment :storage => :s3, :s3_config_path => (RAILS_ROOT + '/config/s3.yml')
+      #   has_attachment :storage => :s3, :s3_config_path => (#{Rails.root} + '/config/s3.yml')
       #
       # === Required configuration parameters
       #
@@ -158,9 +158,9 @@ module Technoweenie # :nodoc:
       #
       # Niether <tt>base_path</tt> or <tt>full_filename</tt> include the bucket name as part of the path.
       # You can retrieve the bucket name using the <tt>bucket_name</tt> method.
-      # 
+      #
       # === Accessing CloudFront URLs
-      # 
+      #
       # You can get an object's CloudFront URL using the cloudfront_url accessor.  Using the example from above:
       # @postcard.cloudfront_url # => http://XXXX.cloudfront.net/photos/1/mexico.jpg
       #
@@ -183,7 +183,7 @@ module Technoweenie # :nodoc:
           end
 
           begin
-            @@s3_config_path = base.attachment_options[:s3_config_path] || (RAILS_ROOT + '/config/amazon_s3.yml')
+            @@s3_config_path = base.attachment_options[:s3_config_path] || (Rails.root.to_s + '/config/amazon_s3.yml')
             @@s3_config = @@s3_config = YAML.load(ERB.new(File.read(@@s3_config_path)).result)[RAILS_ENV].symbolize_keys
           #rescue
           #  raise ConfigFileNotFoundError.new('File %s not found' % @@s3_config_path)
@@ -216,7 +216,7 @@ module Technoweenie # :nodoc:
         def self.port_string
           @port_string ||= (s3_config[:port].nil? || s3_config[:port] == (s3_config[:use_ssl] ? 443 : 80)) ? '' : ":#{s3_config[:port]}"
         end
-        
+
         def self.distribution_domain
           @distribution_domain = s3_config[:distribution_domain]
         end
@@ -233,7 +233,7 @@ module Technoweenie # :nodoc:
           def s3_port_string
             Technoweenie::AttachmentFu::Backends::S3Backend.port_string
           end
-          
+
           def cloudfront_distribution_domain
             Technoweenie::AttachmentFu::Backends::S3Backend.distribution_domain
           end
@@ -269,26 +269,26 @@ module Technoweenie # :nodoc:
         #
         # The resulting url is in the form: <tt>http(s)://:server/:bucket_name/:table_name/:id/:file</tt> where
         # the <tt>:server</tt> variable defaults to <tt>AWS::S3 URL::DEFAULT_HOST</tt> (s3.amazonaws.com) and can be
-        # set using the configuration parameters in <tt>RAILS_ROOT/config/amazon_s3.yml</tt>.
+        # set using the configuration parameters in <tt>#{Rails.root}/config/amazon_s3.yml</tt>.
         #
         # The optional thumbnail argument will output the thumbnail's filename (if any).
         def s3_url(thumbnail = nil)
           File.join(s3_protocol + s3_hostname + s3_port_string, bucket_name, full_filename(thumbnail))
         end
-        
+
         # All public objects are accessible via a GET request to CloudFront. You can generate a
         # url for an object using the cloudfront_url method.
         #
         #   @photo.cloudfront_url
         #
         # The resulting url is in the form: <tt>http://:distribution_domain/:table_name/:id/:file</tt> using
-        # the <tt>:distribution_domain</tt> variable set in the configuration parameters in <tt>RAILS_ROOT/config/amazon_s3.yml</tt>.
+        # the <tt>:distribution_domain</tt> variable set in the configuration parameters in <tt>#{Rails.root}/config/amazon_s3.yml</tt>.
         #
         # The optional thumbnail argument will output the thumbnail's filename (if any).
         def cloudfront_url(thumbnail = nil)
           "http://" + cloudfront_distribution_domain + "/" + full_filename(thumbnail)
         end
-        
+
         def public_filename(*args)
           if attachment_options[:cloudfront]
             cloudfront_url(args)
@@ -347,7 +347,7 @@ module Technoweenie # :nodoc:
         def s3_port_string
           Technoweenie::AttachmentFu::Backends::S3Backend.port_string
         end
-        
+
         def cloudfront_distribution_domain
           Technoweenie::AttachmentFu::Backends::S3Backend.distribution_domain
         end
