@@ -2,7 +2,7 @@
 $:.unshift(File.dirname(__FILE__) + '/../lib')
 
 ENV['RAILS_ENV'] = 'test'
-ENV['RAILS_ROOT'] ||= File.dirname(__FILE__) + '/../../../..'
+ENV['RAILS_ROOT'] ||= File.dirname(__FILE__) + '/..'
 
 require 'test/unit'
 require File.expand_path(File.join(ENV['RAILS_ROOT'], 'config/environment.rb'))
@@ -13,7 +13,7 @@ ActiveRecord::Base.logger = Logger.new(File.dirname(__FILE__) + "/debug.log")
 db_adapter = ENV['DB']
 
 # no db passed, try one of these fine config-free DBs before bombing.
-db_adapter ||= 
+db_adapter ||=
   begin
     require 'rubygems'
     require 'sqlite'
@@ -52,7 +52,7 @@ class Test::Unit::TestCase #:nodoc:
     DbFile.transaction { [Attachment, FileAttachment, OrphanAttachment, MinimalAttachment, DbFile].each { |klass| klass.delete_all } }
     attachment_model self.class.attachment_model
   end
-  
+
   def teardown
     FileUtils.rm_rf File.join(File.dirname(__FILE__), 'files')
     # Files generated by random_tempfile_filename
@@ -63,7 +63,7 @@ class Test::Unit::TestCase #:nodoc:
   #self.use_instantiated_fixtures  = false
 
   def self.attachment_model(klass = nil)
-    @attachment_model = klass if klass 
+    @attachment_model = klass if klass
     @attachment_model
   end
 
@@ -97,7 +97,7 @@ class Test::Unit::TestCase #:nodoc:
         return att
       end
     end
-    
+
     def use_temp_file(fixture_filename)
       temp_path = File.join('/tmp', File.basename(fixture_filename))
       temp_dir = File.join(FIXTURE_PATH, 'tmp')
@@ -121,10 +121,10 @@ class Test::Unit::TestCase #:nodoc:
       end
     end
 
-    def assert_valid(record) 
+    def assert_valid(record)
       assert record.valid?, record.errors.full_messages.join("\n")
-    end 
-    
+    end
+
     def assert_file_jpeg_quality(model, thumbnail, expected)
       filename = if model.respond_to?(:full_filename)
         model.full_filename(thumbnail)
@@ -145,11 +145,11 @@ class Test::Unit::TestCase #:nodoc:
         STDERR.puts "ImageMagick's identify not found / not in PATH: can't quickly check produced image quality."
       end
     end
-    
+
     def assert_not_created
       assert_created(0) { yield }
     end
-    
+
     def should_reject_by_size_with(klass)
       attachment_model klass
       assert_not_created do
@@ -159,19 +159,19 @@ class Test::Unit::TestCase #:nodoc:
         assert_nil attachment.db_file if attachment.respond_to?(:db_file)
       end
     end
-    
+
     def assert_difference(object, method = nil, difference = 1)
       initial_value = object.send(method)
       yield
       assert_equal initial_value + difference, object.send(method)
     end
-    
+
     def assert_no_difference(object, method, &block)
       assert_difference object, method, 0, &block
     end
-    
+
     def attachment_model(klass = nil)
-      @attachment_model = klass if klass 
+      @attachment_model = klass if klass
       @attachment_model
     end
 end
